# dnet

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix
.github/workflows/: test.yml
crates/dnx/: Cargo.toml
crates/dnx-ast/: Cargo.toml
crates/dnx-ast/src/: lib.rs
crates/dnx-bench/: Cargo.toml
crates/dnx-bench/benches/: marquee.rs
crates/dnx-bench/examples/: bench.rs
crates/dnx-core/: Cargo.toml
crates/dnx-core/src/: arena.rs  blob.rs  canonical_hash.rs  class.rs  effect.rs  error.rs  funeq.rs  lib.rs  lopath.rs  net.rs  port.rs  prim.rs  slot.rs
crates/dnx-core/src/reduce/: canon.rs  gpu.rs  mod.rs  parallel.rs  rules.rs  whnf.rs
crates/dnx-core/tests/: oracle.rs  paper_rules_conformance.rs  refnorm.proptest-regressions  refnorm.rs
crates/dnx-daemon/: Cargo.toml
crates/dnx-daemon/src/: lib.rs  proto.rs  server.rs
crates/dnx-daemon/tests/: daemon.rs
crates/dnx-dist/: Cargo.toml
crates/dnx-dist/examples/: seed.rs
crates/dnx-dist/src/: disk.rs  lib.rs  wire.rs
crates/dnx-dist/tests/: cache.rs  disk.rs  network.rs  replication.rs
crates/dnx-drv/: Cargo.toml
crates/dnx-drv/src/: drv.rs  error.rs  lib.rs
crates/dnx-drv/tests/: realize.rs
crates/dnx-elab/: Cargo.toml
crates/dnx-elab/src/: alpha.rs  lib.rs  pass0.rs  pass1.rs  pass2.rs
crates/dnx-elab/tests/: levels.rs  recursion_ref_vs_y.rs
crates/dnx-flake/: Cargo.toml
crates/dnx-flake/src/: error.rs  flake.rs  lib.rs  lock.rs  report.rs
crates/dnx-flake/tests/: flake_front_end.rs
crates/dnx-gpu/: Cargo.toml
crates/dnx-gpu/benches/: reduction.rs
crates/dnx-gpu/src/: amortized.rs  lib.rs  rewrite.wgsl  rewrite_am.wgsl  scheduler.rs
crates/dnx-gpu/tests/: oracle.rs  zzprobe2.rs
crates/dnx-lang/: Cargo.toml
crates/dnx-lang/src/: error.rs  lib.rs  prelude.rs  prim.rs  runtime.rs  scope.rs  suite.rs
crates/dnx-lang/src/parser/: binding.rs  collections.rs  helpers.rs  lambda.rs  literals.rs  mod.rs
crates/dnx-lang/tests/: drv_strict.rs  eval_api.rs  import.rs  insert_nonscalar.rs  probe2.rs  recursion_oracle.rs
crates/dnx-prim/: Cargo.toml
crates/dnx-prim/src/: lib.rs  prim.rs
crates/dnx-proof/: Cargo.toml
crates/dnx-proof/src/: conv.rs  driver.rs  env.rs  erase.rs  extract.rs  inductive.rs  infer.rs  lib.rs  positivity.rs  recursor.rs  symbol.rs  tm.rs  universe.rs
crates/dnx-proof/tests/: eq_prelude.rs  fourcolor_c5.rs  fourcolor_coloring.rs  fourcolor_demo.rs  fourcolor_k3_chromatic.rs  fourcolor_wheel.rs  levitation_desc.rs  levitation_slice1.rs  soundness.rs  soundness_battery.rs  thm_bool_logic.rs  thm_filter.rs  thm_induction.rs  thm_length_append.rs  thm_length_map.rs  thm_list_append.rs  thm_map_append.rs  thm_map_map.rs  thm_mul.rs  thm_mul_laws.rs  thm_nat_algebra.rs  thm_nat_arith.rs  thm_option.rs  thm_plus_n_o.rs  thm_reverse_involution.rs  thm_sum_list.rs
crates/dnx-pyparse/: Cargo.toml
crates/dnx-pyparse/src/: ast.rs  error.rs  lexer.rs  lib.rs  lower.rs  parser.rs  runtime.rs
crates/dnx-pyparse/tests/: eval.rs
crates/dnx-read/: Cargo.toml
crates/dnx-read/src/: lib.rs
crates/dnx-read/tests/: oracle.rs
crates/dnx-sched/: Cargo.toml
crates/dnx-sched/src/: lib.rs  parallel.rs  sequential.rs
crates/dnx-sched/tests/: parallel_equiv.rs  parallel_equiv_spine.rs  parallel_equiv_wide.rs  whnf_oracle.rs
crates/dnx-store/: Cargo.toml
crates/dnx-store/src/: error.rs  lib.rs  path.rs  store.rs
crates/dnx-store/tests/: store.rs
crates/dnx-test/: Cargo.toml
crates/dnx-test/src/: cache.rs  lib.rs  scan.rs
crates/dnx-test/tests/: import_tree_scan.rs  import_tree_slice.rs
crates/dnx-test/tests/fixtures/: import-tree-slice.nix
crates/dnx-tm-elab/: Cargo.toml
crates/dnx-tm-elab/src/: lib.rs  lower.rs  surface.rs
crates/dnx-tm-elab/tests/: roundtrip.rs
crates/dnx-ts/: Cargo.toml
crates/dnx-ts/src/: error.rs  lib.rs  lower.rs  runtime.rs  surface.rs
crates/dnx-ts/tests/: lambda.rs  roundtrip.rs
crates/dnx/examples/: flake.nix  hello.nix  hello.py  lib.nix  main.nix
crates/dnx/src/: main.rs
crates/dnx/tests/: cli_build.rs  cli_py.rs
