[package]
name = "dnx-flake"
version = "0.1.0"
edition.workspace = true

[dependencies]
dnx-core = { path = "../dnx-core" }
dnx-lang = { path = "../dnx-lang" }
dnx-drv = { path = "../dnx-drv" }
dnx-store = { path = "../dnx-store" }
rnix = "0.12"
rowan = "0.15"
blake3 = "1"

[dev-dependencies]
blake3 = "1"
dnx-store = { path = "../dnx-store" }
