[package]
name = "dnx-gpu"
version = "0.1.0"
edition.workspace = true

[dependencies]
dnx-core = { path = "../dnx-core" }
dnx-sched = { path = "../dnx-sched" }
wgpu = "22"
pollster = "0.3"

[dev-dependencies]
dnx-core  = { path = "../dnx-core" }
dnx-sched = { path = "../dnx-sched" }
dnx-ast   = { path = "../dnx-ast" }
dnx-elab  = { path = "../dnx-elab" }
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "reduction"
harness = false
